--- a/style.css
+++ b/style.css
@@ -10,3 +10,11 @@ body {
     width: 175px;
     margin: 0;
 }
+
+h1 {
+    font-weight: normal;
+    font-size: 1em;
+    font-style: normal;
+    text-decoration: underline;
+    color: pink;
+}
