--- a/style.css
+++ b/style.css
@@ -18,3 +18,16 @@ h1 {
     text-decoration: underline;
     color: pink;
 }
+
+.centered {
+
+}
+
+.button {
+    display: inline-block;
+    padding: 10px;
+    text-transform: uppercase;
+    border: 1ps solid currentColor;
+    border-radius: 3px;
+    margin: 0;
+}
