--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
     font-weight: normal;
     font-size: 1em;
     font-style: normal;
-    text-decoration: underline;
+    text-decoration: none;
     color: pink;
 }
 
