--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 h1 {
     font-weight: normal;
     font-size: 1em;
-    font-style: normal;
+    font-style: italic;
     text-decoration: underline;
     color: pink;
 }
