--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 h1 {
-    font-weight: normal;
+    font-weight: bold;
     font-size: 1.5em;
     font-style: normal;
     text-decoration: none;
