Changed button margin in style.css

--- a/style.css
+++ b/style.css
@@ -29,5 +29,5 @@ h1 {
     text-transform: uppercase;
     border: 1ps solid currentColor;
     border-radius: 3px;
-    margin: 0;
+    margin: 40px 0;
 }
